# vocoder-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
docs/: G711_TEST_PROCEDURE.md
examples/: client.rs  g711_demo.rs
proto/: vocoder.proto
src/: g711.rs  lib.rs  main.rs  server.rs  service.rs  vocoder.rs
