[package]
name = "vocoder-rs"
version = "0.1.0"
edition = "2021"
description = "VocoderService implementation in Rust with gRPC interfaces"
authors = ["Daniele Olmisani"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
